Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-75149

When multiple QQmlEngines are created and used with QML that creates a Dialog it will cause a memory leak inside the Dialog QML plugin

XMLWordPrintable

    • a54eb316af7921ff77d4419c8b11b31f8e6fac7b (qt/qtquickcontrols/5.12)

      When multiple QQmlEngines are created and used with QML that creates a Dialog it will cause a memory leak inside the Dialog QML plugin. This is due to the fact that initializeEngine() is called twice and it will create a new QQmlComponent without deleting the other one first.

        For Gerrit Dashboard: QTBUG-75149
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes